yle-dl - download videos from Yle servers
Copyright 2009-2024 Antti Ajanki
Distributed under the GPL v3 or later

<unreleased>

- Support for a new stream type
- Series page downloading was partly broken after changes in Areena
- Some Elävä arkisto/Arkivet pages were broken

Version 20240130

- Fix live download links for Yle Sámi radio, Puhe and Vega radio channels
- Extract inline videos embedded on yle.fi news pages
- Downloading was broken on Python 3.8 since a few releases ago

Version 20231214

- --startposition was not working properly on live streams
- Fixed yle.fi video extraction
- The wget backend works on many streams again

Version 20231120

- Requires Python 3.7+
- Try to detect if the destination filesystem requires a restricted character
  set. Only if an optional dependency python-psutil is installed.
- The metadata now contains just subtitles, not embedded_subtitles
- The subtitle language code in the metadata is correct instead of "unk"
- Create directories by default. Use --no-create-dirs to stop if directory does
  not exist. (This was the previous default.)
- Read configuration from ~/.config/yledl.conf in addition to ~/.yledl.conf
- New output template variables: ${season} and ${episode_or_date}

Version 20230611

- Fixed news clip downloading after changes to the Yle news site
- The download URL for a new flavor of podcasts was incorrect

Version 20221231

- Full series download on Swedish language arenan.yle.fi fixed
- Downloading news clips from yle.fi (in addition to yle.fi/uutiset/)
- Improved episode sorting when several episodes are published on the same day

Version 20221111

- Fixed some geo-blocking related failures

Version 20221015

- Support new live radio URLs containing /podcastit/
- --restrict-filename-no-spaces avoids spaces in generated filenames
- --restrict-filename-no-specials generates Windows-compatible filenames (alias for --vfat)
- --output-na-placeholder: Placeholder value for unavailable fields in filenames